--- a/src/main/resources/request/AMS_1_4_1_Ping.tmpl
+++ b/src/main/resources/request/AMS_1_4_1_Ping.tmpl
@@ -1,3 +1,5 @@
+<#assign xmlTimeStamp = timeStamp?string("yyyy-MM-dd'T'HH:mm:ssZ")>
+<#assign xmlTimeStamp = xmlTimeStamp?substring(0, 22) + ":" + xmlTimeStamp?substring(22)>
 <ac:PingRq xmlns="http://www.ACORD.org/Standards/AcordMsgSvc/Ping" xmlns:ac="http://www.ACORD.org/Standards/AcordMsgSvc/1.4.0">
     <ac:Sender>
       <ac:PartyId>${senderParty}</ac:PartyId>
@@ -11,7 +13,7 @@
       <ac:ApplicationCd>Jv-Ins-Reinsurance</ac:ApplicationCd>
       <ac:SchemaVersion>http://www.ACORD.org/Standards/Jv-Ins-Reinsurance/2003-1</ac:SchemaVersion>
     </ac:Application>
-    <ac:TimeStamp>${timeStamp?string("yyyy-MM-dd'T'HH:mm:ss.S'z'")}</ac:TimeStamp>
+    <ac:TimeStamp>${xmlTimeStamp}</ac:TimeStamp>
     <ac:PingId>${requestId}</ac:PingId>
     <ac:SecurityProfileCd>Basic</ac:SecurityProfileCd>
 </ac:PingRq>
