--- a/src/main/resources/request/AMS_1_4_1_Ping.tmpl
+++ b/src/main/resources/request/AMS_1_4_1_Ping.tmpl
@@ -1,5 +1,6 @@
 <#assign xmlTimeStamp = timeStamp?string("yyyy-MM-dd'T'HH:mm:ssZ")>
 <#assign xmlTimeStamp = xmlTimeStamp?substring(0, 22) + ":" + xmlTimeStamp?substring(22)>
+<?xml version="1.0" encoding="UTF-8"?>
 <ac:PingRq xmlns="http://www.ACORD.org/Standards/AcordMsgSvc/Ping" xmlns:ac="http://www.ACORD.org/Standards/AcordMsgSvc/1.4.0">
     <ac:Sender>
       <ac:PartyId>${senderParty}</ac:PartyId>
